feat: handle loader on lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet />
+<router-outlet>
+  <div *ngIf="isLoading$ | async" class="loader">
+    <p-progressSpinner strokeWidth="5" />
+  </div>
+</router-outlet>
