--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
 :host {
   height: 100%;
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  backdrop-filter: blur(.5rem);
+}
