--- a/src/app/views/unauthorized/unauthorized.component.html
+++ b/src/app/views/unauthorized/unauthorized.component.html
@@ -1,6 +1,7 @@
 <div class="unauthorized">
-  <h1>{{ 'UNAUTHORIZED_INFO' | translate }}</h1>
+  <h1 class="unauthorized__label">{{ 'UNAUTHORIZED_INFO' | translate }}</h1>
   <p-button
+    class="unauthorized__btn"
     [label]="'BUTTON.LOGIN' | translate | uppercase"
     (click)="handleLoginBtnClick()" />
 </div>
