--- a/src/app/views/unauthorized/unauthorized.component.scss
+++ b/src/app/views/unauthorized/unauthorized.component.scss
@@ -10,4 +10,32 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+
+  &__label {
+    animation: opacityLabel .5s both;
+  }
+
+  &__btn {
+    animation: opacityLBtn .5s .3s both;
+  }
+}
+
+@keyframes opacityLabel {
+  from {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes opacityLBtn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
