feat: handle mock of signup

--- a/src/app/views/auth/components/sign-in/sign-in.component.html
+++ b/src/app/views/auth/components/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <p-card
   class="card"
-  [header]="'AUTH.HEADER' | translate: { appName }"
+  [header]="'AUTH.SIGN_IN.HEADER' | translate: { appName }"
   [subheader]="'AUTH.SIGN_IN.SUBHEADER' | translate"
   [style]="{
     maxWidth: '90vw',
