--- a/src/app/views/unauthorized/unauthorized.component.scss
+++ b/src/app/views/unauthorized/unauthorized.component.scss
@@ -12,30 +12,10 @@
   gap: 1rem;
 
   &__label {
-    animation: opacityLabel .5s both;
+    animation: show-from-top .5s both;
   }
 
   &__btn {
-    animation: opacityLBtn .5s .3s both;
-  }
-}
-
-@keyframes opacityLabel {
-  from {
-    transform: translateY(-1rem);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes opacityLBtn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+    animation: show .5s .3s both;
   }
 }
