feat: handle main component

--- a/src/styles/configs/_base.scss
+++ b/src/styles/configs/_base.scss
@@ -4,6 +4,19 @@
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #D9AA4A;
+  border-radius: 1rem;
+}
+
 html, body {
   height: 100%;
 }
@@ -15,3 +28,4 @@ html {
 body {
   background-color: #F5F5F5;
 }
+
