fix: ts paths with jest

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,18 +1,7 @@
 <header class="header">header</header>
 <main class="main">
   <div class="content-container">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit soluta
-      tempore. Consequatur possimus sequi unde. Alias aspernatur atque, autem,
-      delectus deleniti dolor ducimus earum id, iusto labore maxime nostrum
-      numquam porro reiciendis rem similique tempora temporibus ut veniam
-      voluptatem? Accusamus corporis dolore error esse fugit in itaque mollitia
-      officiis vero voluptate. Ad consequatur fugit harum ipsam nobis
-      perferendis qui quis quos recusandae voluptatum? Atque aut consequatur
-      dolore eius et excepturi, facere impedit itaque iure laborum minima nihil
-      qui quidem reiciendis repudiandae similique, temporibus, voluptatem! Ad
-      delectus deleniti, ducimus eum fuga maxime necessitatibus odit ratione
-      recusandae suscipit ullam unde voluptatem.
-    </p>
+    <div>breadcrumb</div>
+    <router-outlet />
   </div>
 </main>
