--- a/src/app/views/auth/components/sign-up/sign-up.component.scss
+++ b/src/app/views/auth/components/sign-up/sign-up.component.scss
@@ -10,3 +10,29 @@
     align-items: center;
   }
 }
+
+.form {
+  margin-top: 1rem;
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__fields {
+    display: flex;
+    gap: 3rem;
+  }
+
+  &__field {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  &__password {
+    width: 100%;
+  }
+}
