fix: move form signup to separate component

--- a/src/app/views/auth/components/sign-up/sign-up.component.html
+++ b/src/app/views/auth/components/sign-up/sign-up.component.html
@@ -11,107 +11,32 @@
     [readonly]="false"
     [activeIndex]="activeStepsIdx"
     (activeIndexChange)="onActiveIdxChange($event)" />
-  <form [formGroup]="form" class="form">
-    <ng-container *ngrxLet="form.controls.commonGroup as commonGroup">
-      <div
-        formGroupName="commonGroup"
-        *ngIf="activeStepsIdx === 0"
-        class="form__group">
-        <div class="form__fields">
-          <div class="form__field">
-            <input
-              [style]="{ width: '100%' }"
-              type="text"
-              pInputText
-              formControlName="name"
-              [placeholder]="'FORM.NAME' | translate"
-              [pTooltip]="'FORM.NAME_TOOLTIP' | translate"
-              tooltipPosition="top" />
-            <ng-container *ngIf="commonGroup.controls.name.touched">
-              <p-message
-                *ngIf="commonGroup.controls.name.valid"
-                severity="success" />
-              <p-message
-                *ngIf="commonGroup.controls.name.invalid"
-                severity="error" />
-            </ng-container>
-          </div>
-          <div class="form__field">
-            <input
-              [style]="{ width: '100%' }"
-              type="text"
-              pInputText
-              formControlName="surname"
-              [placeholder]="'FORM.SURNAME' | translate"
-              [pTooltip]="'FORM.SURNAME_TOOLTIP' | translate"
-              tooltipPosition="top" />
-            <ng-container *ngIf="commonGroup.controls.surname.touched">
-              <p-message
-                *ngIf="commonGroup.controls.surname.valid"
-                severity="success" />
-              <p-message
-                *ngIf="commonGroup.controls.surname.invalid"
-                severity="error" />
-            </ng-container>
-          </div>
-        </div>
-        <div class="form__fields">
-          <div class="form__field">
-            <input
-              [style]="{ width: '100%' }"
-              type="text"
-              pInputText
-              formControlName="email"
-              [placeholder]="'FORM.EMAIL' | translate"
-              [pTooltip]="'FORM.EMAIL_TOOLTIP' | translate"
-              tooltipPosition="top" />
-            <ng-container *ngIf="commonGroup.controls.email.touched">
-              <p-message
-                *ngIf="commonGroup.controls.email.valid"
-                severity="success" />
-              <p-message
-                *ngIf="commonGroup.controls.email.invalid"
-                severity="error" />
-            </ng-container>
-          </div>
-          <div class="form__field">
-            <p-password
-              class="form__password"
-              [style]="{ width: '100%' }"
-              [inputStyle]="{ width: '100%' }"
-              formControlName="password"
-              [toggleMask]="true"
-              [feedback]="false"
-              [placeholder]="'FORM.PASSWORD' | translate"
-              [pTooltip]="'FORM.PASSWORD_TOOLTIP' | translate"
-              tooltipPosition="top" />
-            <ng-container *ngIf="commonGroup.controls.password.touched">
-              <p-message
-                *ngIf="commonGroup.controls.password.valid"
-                severity="success" />
-              <p-message
-                *ngIf="commonGroup.controls.password.invalid"
-                severity="error" />
-            </ng-container>
-          </div>
-        </div>
-      </div>
-    </ng-container>
 
-    <div
-      formGroupName="dataGroup"
-      *ngIf="activeStepsIdx === 1"
-      class="form__group">
-      Form 2
-    </div>
-  </form>
+  <app-sign-up-form [form]="form" [activeStepsIdx]="activeStepsIdx" />
 
   <ng-template pTemplate="footer">
     <div class="card__footer">
-      <p-button
-        [label]="'BUTTON.REGISTER' | translate | uppercase"
-        (click)="handleSubmitForm()"
-        class="card__btn" />
+      <div class="card__footer-btns">
+        <p-button
+          [label]="'BUTTON.BACKWARD' | translate | uppercase"
+          [disabled]="activeStepsIdx === 0"
+          icon="pi pi-angle-left"
+          (click)="handleBackwardFormBtn()"
+          class="card__btn" />
+        <p-button
+          *ngIf="activeStepsIdx !== stepsItems.length - 1; else submitBtn"
+          [label]="'BUTTON.NEXT' | translate | uppercase"
+          icon="pi pi-angle-right"
+          iconPos="right"
+          (click)="handleNextFormBtn()"
+          class="card__btn" />
+      </div>
+      <ng-template #submitBtn>
+        <p-button
+          [label]="'BUTTON.REGISTER' | translate | uppercase"
+          (click)="handleSubmitForm()"
+          class="card__btn" />
+      </ng-template>
       <p-divider />
       <p class="card__footer-text">
         {{ 'AUTH.LOGIN_INFO' | translate }}
