--- a/src/app/views/auth/components/sign-up/sign-up.component.scss
+++ b/src/app/views/auth/components/sign-up/sign-up.component.scss
@@ -4,35 +4,14 @@
 }
 
 .card {
+  &__footer-btns {
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__footer-text {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-  }
-}
-
-.form {
-  margin-top: 1rem;
-
-  &__group {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  &__fields {
-    display: flex;
-    gap: 3rem;
-  }
-
-  &__field {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-  }
-
-  &__password {
-    width: 100%;
   }
 }
