--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -13,7 +13,7 @@
   height: 5rem;
   background-color: var(--primary-color);
   color: var(--primary-color-text);
-  box-shadow: 0 .1rem 1rem 0 #595959;
+  box-shadow: 0 0.1rem 1rem 0 #595959;
 }
 
 .main {
