--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,5 +13,5 @@
   width: 100%;
   height: 100%;
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(.5rem);
+  backdrop-filter: blur(0.5rem);
 }
