--- a/src/app/views/auth/components/sign-up/components/sign-up-form/sign-up-form.component.html
+++ b/src/app/views/auth/components/sign-up/components/sign-up-form/sign-up-form.component.html
@@ -1,94 +1,70 @@
-<form [formGroup]="form" class="form">
+<form class="form" [formGroup]="form">
   <ng-container *ngrxLet="form.controls.commonGroup as commonGroup">
-    <div
-      formGroupName="commonGroup"
-      *ngIf="activeStepsIdx === 0"
-      class="form__group">
+    <div *ngIf="activeStepsIdx === 0" formGroupName="commonGroup" class="form__group">
       <div class="form__fields">
         <div class="form__field">
           <input
-            [style]="{ width: '100%' }"
             type="text"
             pInputText
             formControlName="name"
+            tooltipPosition="top"
+            [style]="{ width: '100%' }"
             [placeholder]="'FORM.NAME' | translate"
-            [pTooltip]="'FORM.NAME_TOOLTIP' | translate"
-            tooltipPosition="top" />
+            [pTooltip]="'FORM.NAME_TOOLTIP' | translate" />
           <ng-container *ngIf="commonGroup.controls.name.touched">
-            <p-message
-              *ngIf="commonGroup.controls.name.valid"
-              severity="success" />
-            <p-message
-              *ngIf="commonGroup.controls.name.invalid"
-              severity="error" />
+            <p-message *ngIf="commonGroup.controls.name.valid" severity="success" />
+            <p-message *ngIf="commonGroup.controls.name.invalid" severity="error" />
           </ng-container>
         </div>
         <div class="form__field">
           <input
-            [style]="{ width: '100%' }"
             type="text"
             pInputText
             formControlName="surname"
+            tooltipPosition="top"
+            [style]="{ width: '100%' }"
             [placeholder]="'FORM.SURNAME' | translate"
-            [pTooltip]="'FORM.SURNAME_TOOLTIP' | translate"
-            tooltipPosition="top" />
+            [pTooltip]="'FORM.SURNAME_TOOLTIP' | translate" />
           <ng-container *ngIf="commonGroup.controls.surname.touched">
-            <p-message
-              *ngIf="commonGroup.controls.surname.valid"
-              severity="success" />
-            <p-message
-              *ngIf="commonGroup.controls.surname.invalid"
-              severity="error" />
+            <p-message *ngIf="commonGroup.controls.surname.valid" severity="success" />
+            <p-message *ngIf="commonGroup.controls.surname.invalid" severity="error" />
           </ng-container>
         </div>
       </div>
       <div class="form__fields">
         <div class="form__field">
           <input
-            [style]="{ width: '100%' }"
             type="text"
             pInputText
             formControlName="email"
+            tooltipPosition="top"
+            [style]="{ width: '100%' }"
             [placeholder]="'FORM.EMAIL' | translate"
-            [pTooltip]="'FORM.EMAIL_TOOLTIP' | translate"
-            tooltipPosition="top" />
+            [pTooltip]="'FORM.EMAIL_TOOLTIP' | translate" />
           <ng-container *ngIf="commonGroup.controls.email.touched">
-            <p-message
-              *ngIf="commonGroup.controls.email.valid"
-              severity="success" />
-            <p-message
-              *ngIf="commonGroup.controls.email.invalid"
-              severity="error" />
+            <p-message *ngIf="commonGroup.controls.email.valid" severity="success" />
+            <p-message *ngIf="commonGroup.controls.email.invalid" severity="error" />
           </ng-container>
         </div>
         <div class="form__field">
           <p-password
             class="form__password"
+            formControlName="password"
+            tooltipPosition="top"
             [style]="{ width: '100%' }"
             [inputStyle]="{ width: '100%' }"
-            formControlName="password"
             [toggleMask]="true"
             [feedback]="false"
             [placeholder]="'FORM.PASSWORD' | translate"
-            [pTooltip]="'FORM.PASSWORD_TOOLTIP' | translate"
-            tooltipPosition="top" />
+            [pTooltip]="'FORM.PASSWORD_TOOLTIP' | translate" />
           <ng-container *ngIf="commonGroup.controls.password.touched">
-            <p-message
-              *ngIf="commonGroup.controls.password.valid"
-              severity="success" />
-            <p-message
-              *ngIf="commonGroup.controls.password.invalid"
-              severity="error" />
+            <p-message *ngIf="commonGroup.controls.password.valid" severity="success" />
+            <p-message *ngIf="commonGroup.controls.password.invalid" severity="error" />
           </ng-container>
         </div>
       </div>
     </div>
   </ng-container>
 
-  <div
-    formGroupName="dataGroup"
-    *ngIf="activeStepsIdx === 1"
-    class="form__group">
-    Form 2
-  </div>
+  <div *ngIf="activeStepsIdx === 1" formGroupName="dataGroup" class="form__group">Form 2</div>
 </form>
