--- a/src/app/views/auth/components/sign-up/sign-up.component.html
+++ b/src/app/views/auth/components/sign-up/sign-up.component.html
@@ -18,32 +18,26 @@
     <div class="card__footer">
       <div class="card__footer-btns">
         <p-button
+          icon="pi pi-angle-left"
+          class="card__btn"
           [label]="'BUTTON.BACKWARD' | translate | uppercase"
           [disabled]="activeStepsIdx === 0"
-          icon="pi pi-angle-left"
-          (click)="handleBackwardFormBtn()"
-          class="card__btn" />
+          (click)="handleBackwardFormBtn()" />
         <p-button
           *ngIf="activeStepsIdx !== stepsItems.length - 1; else submitBtn"
-          [label]="'BUTTON.NEXT' | translate | uppercase"
           icon="pi pi-angle-right"
           iconPos="right"
-          (click)="handleNextFormBtn()"
-          class="card__btn" />
+          class="card__btn"
+          [label]="'BUTTON.NEXT' | translate | uppercase"
+          (click)="handleNextFormBtn()" />
       </div>
       <ng-template #submitBtn>
-        <p-button
-          [label]="'BUTTON.REGISTER' | translate | uppercase"
-          (click)="handleSubmitForm()"
-          class="card__btn" />
+        <p-button class="card__btn" [label]="'BUTTON.REGISTER' | translate | uppercase" (click)="handleSubmitForm()" />
       </ng-template>
       <p-divider />
       <p class="card__footer-text">
         {{ 'AUTH.LOGIN_INFO' | translate }}
-        <p-button
-          [label]="'AUTH.LOGIN' | translate"
-          styleClass="p-button-link"
-          (click)="handleLoginRouting()" />
+        <p-button styleClass="p-button-link" [label]="'AUTH.LOGIN' | translate" (click)="handleLoginRouting()" />
       </p>
     </div>
   </ng-template>
