--- a/src/styles/configs/_base.scss
+++ b/src/styles/configs/_base.scss
@@ -13,11 +13,12 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #D9AA4A;
+  background-color: #d9aa4a;
   border-radius: 1rem;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -26,6 +27,5 @@ html {
 }
 
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
-
