feat: create and implement auth guard

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,4 +1,7 @@
-<header class="header">header</header>
+<header class="header">
+  <div></div>
+  <p-splitButton icon="pi pi-user" [label]="'NAME SURNAME' | translate" [model]="headerBtnItems" />
+</header>
 <main class="main">
   <div class="content-container">
     <div>breadcrumb</div>
