--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -8,6 +8,7 @@
   position: sticky;
   top: 0;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 1rem;
   height: 5rem;
