--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,6 +1,10 @@
 <header class="header">
   <div></div>
-  <p-splitButton icon="pi pi-user" [label]="'NAME SURNAME' | translate" [model]="headerBtnItems" />
+  <p-splitButton
+    icon="pi pi-user"
+    [label]="'NAME SURNAME' | translate"
+    [model]="headerBtnItems"
+    (click)="goProfile()" />
 </header>
 <main class="main">
   <div class="content-container">
