--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -8,7 +8,7 @@
 </header>
 <main class="main">
   <div class="content-container">
-    <div>breadcrumb</div>
+    <app-breadcrumbs class="main__breadcrumbs-container" />
     <router-outlet />
   </div>
 </main>
