fix: handle header with menu

--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,10 +1,5 @@
 <header class="header">
-  <div></div>
-  <p-splitButton
-    icon="pi pi-user"
-    [label]="'NAME SURNAME' | translate"
-    [model]="headerBtnItems"
-    (click)="goProfile()" />
+  <app-header />
 </header>
 <main class="main">
   <div class="content-container">
