--- a/src/app/views/main/views/creators/views/questions/questions.component.html
+++ b/src/app/views/main/views/creators/views/questions/questions.component.html
@@ -1,11 +1,6 @@
-<p-tabView [activeIndex]="1">
+<p-tabView>
   <p-tabPanel [header]="'BUTTON.QUESTION_CLOSE' | translate">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <app-question-close />
   </p-tabPanel>
   <p-tabPanel [header]="'BUTTON.QUESTION_OPEN' | translate">
     <app-question-open />
