--- a/src/app/views/main/views/creators/views/creator-questions/components/question-open/question-open.component.scss
+++ b/src/app/views/main/views/creators/views/creator-questions/components/question-open/question-open.component.scss
@@ -9,7 +9,8 @@
   margin-bottom: 2rem;
 }
 
-.form {display: grid;
+.form {
+  display: grid;
   grid-template-areas: 'content' 'option';
   gap: 3rem;
 
