--- a/src/app/views/main/views/creators/views/creator-exam/creator-exam.component.scss
+++ b/src/app/views/main/views/creators/views/creator-exam/creator-exam.component.scss
@@ -50,3 +50,29 @@
     grid-template-areas: 'content option';
   }
 }
+
+.questions-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+  }
+}
+
+.questions {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+
+  &__form {
+    display: flex;
+    gap: 1rem;
+  }
+
+  &__list {
+    list-style: none;
+  }
+}
