--- a/src/app/shared/components/question-detail-item/question-detail-item.component.scss
+++ b/src/app/shared/components/question-detail-item/question-detail-item.component.scss
@@ -19,7 +19,6 @@
 }
 
 .detail {
-
   &__header {
     display: flex;
     justify-content: space-between;
@@ -30,6 +29,26 @@
   &__heading {
     font-size: 1.3rem;
   }
+}
 
+.answers {
+  &__heading {
+    margin-bottom: 1rem;
+  }
 
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
+  }
+
+  &__item {
+    display: flex;
+    gap: 1rem;
+  }
+
+  &__content {
+    flex-grow: 1;
+  }
 }
