--- a/src/styles/customs/_forms.scss
+++ b/src/styles/customs/_forms.scss
@@ -5,8 +5,10 @@
     align-items: center;
     gap: 1rem;
 
-    &--textarea {
-      align-items: flex-start;
+    &--hint {
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 0;
     }
   }
 }
