--- a/src/styles/customs/_forms.scss
+++ b/src/styles/customs/_forms.scss
@@ -1,5 +1,12 @@
 .form {
 
+  &__content-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
   &__field {
     display: flex;
     align-items: center;
